# strava_description_editor

./: .gitignore  LICENSE  README.md  app.py  config.py  play.py  pyproject.toml  run.py
app/: __init__.py  admin.py  auth.py  models.py  views.py  webhooks.py
app/blueprints/activities/: __init__.py  routes.py
app/blueprints/activities/functions/: get_activity_data.py  update_activity_visibility.py
app/blueprints/activities/routes/: get_activity.py  store_activities.py  update_activity.py
app/blueprints/activities/scripts/: get_activity.py
app/blueprints/auth/: __init__.py  models.py  routes.py
app/blueprints/charts/: __init__.py  routes.py
app/blueprints/data_viz/: __init__.py  ridge_plot.py
app/blueprints/get_activities/: __init__.py  routes.py
app/blueprints/home/: __init__.py  routes.py
app/blueprints/streak/: __init__.py  routes.py
app/blueprints/webhooks/: __init__.py  routes.py
app/models/: models.py
app/models/strava/: activity_stats.py  activity_total.py  detailed_activity.py  detailed_athlete.py  detailed_segment_effort.py  lap.py  lat_lng.py  meta_activity.py  meta_athlete.py  photos_summary.py  photos_summary_primary.py  polyline_map.py  sport_type.py  summary_activity.py  summary_club.py  summary_gear.py  summary_pr_segment_effort.py  summary_segment.py  summary_segment_effort.py  user_tokens.py
app/static/: style.css
app/templates/: update_activity.html
app/tests/: conftest.py  test_home.py  test_longest_streak.py
notebooks/: parse_hill_repeat_up_and_down.ipynb  parse_hill_repeats.ipynb
notebooks/fitfiles/: 17684106977_ACTIVITY.fit  17692097071_ACTIVITY.fit  17727285417_ACTIVITY.fit
templates/: index.html  strava.html  update_activity.html
(+28 files in other folders)
