[tool.poetry]
name = "strava-description-editor"
version = "0.1.0"
description = ""
authors = ["Thibauld Braet <thibauld@live.be>"]
readme = "README.md"
packages = [{include = "strava_description_editor"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
requests = "^2.32.3"
pytest = "^8.2.2"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
