[tool.poetry]
name = "strava-description-editor"
version = "0.1.0"
description = ""
authors = ["Thibauld Braet <thibauld@live.be>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
pytest = "^8.2.2"
flask-sqlalchemy = "^3.1.1"
flask-admin = "^2.0.0a0"
python-dotenv = "^1.0.1"
flask-session = "^0.8.0"
redis = "^5.0.8"
seaborn = "^0.13.2"
stravavis = "^0.4.0"
psycopg2-binary = "^2.9.9"
flask-migrate = "^4.0.7"
fitparse = "^1.2.0"
ipykernel = "^6.29.5"
duckdb = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
